--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -248,7 +248,7 @@ div.page-person {
     padding: 0 35px 35px 35px;
     height: 100%;
     width: 100%;
-    overflow-y: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
 
