--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -241,6 +241,10 @@ div.page-relationship {
         margin-bottom: 50px;
         margin-left: 60px;
     }
+
+    div.current-groups {
+      margin-bottom: 30px;
+    }
 }
 
 div.page-person {
