--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -186,7 +186,7 @@ div.page-pincode {
       }
     }
 
-    button:last-child {
+    button.health-center:last-child {
         margin-bottom: 6rem !important;
     }
 }
