--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -186,6 +186,7 @@ div.page-pincode {
       }
     }
 
+    // Maintaing margin from 'sign out' button when selecting health center.
     button.health-center:last-child {
         margin-bottom: 6rem !important;
     }
