A fix for #1106 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -341,6 +341,7 @@ div.page-prenatal-encounter {
 
     .ui.full.segment {
       color: $color-text;
+      margin-bottom: 20px;
 
       .full.content {
         min-height: 430px;
