Fix for #974, point 6 [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -531,6 +531,7 @@ div.page-prenatal-activity {
       }
 
       .results {
+        display: inline-block;
         width: 100%;
 
         .edd-result,
