Complete Obstetrical History (page 2) alerts [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -356,6 +356,10 @@ div.page-prenatal-encounter {
       }
     }
 
+    .form.history.obstetric.second .ui.grid{
+      min-height: 70px;
+    }
+
     .ui.full.segment {
       color: $color-text;
       margin-bottom: 20px;
