Vitals alerts [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -620,6 +620,10 @@ div.page-prenatal-activity {
           }
         }
 
+        .ui.grid.systolic img {
+          margin-top: -10px;
+        }
+
         .title.dia {
           margin-top: 20px;
         }
