--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-light-background: #0393db;
 $color-gray:       #b1b1b1;
 $color-red:        #ff0000;
 $color-light-gray: #e6e6e6;
+$color-red-alert:  #d4145a;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
