View alerts in dialog [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1018,13 +1018,52 @@ input::placeholder {
   box-shadow: 0 0 8px rgba(0,0,0,0.2);
 
   &.alerts-dialog {
-    border-top: 4px solid $color-red-alert;
-    width: 600px !important;
-    margin-left: -300px !important;
+    border-top: 7px solid $color-red-alert;
+    width: 700px !important;
+    margin-left: -350px !important;
 
     > .content {
-      min-height: 200px;
+      display: inline-block;
       max-height: 600px;
+      min-height: 200px;
+
+      .section-label-wrapper {
+        height: 48px;
+
+        img {
+          float: left;
+          width: 48px;
+        }
+
+        .section-label {
+          color: $color-dark-gray;
+          float: left;
+          line-height: 48px;
+          margin-left: 30px;
+          text-align: left;
+          width: 430px;
+        }
+      }
+
+      .section-items {
+        color: $color-gray;
+        font-size: 20px;
+        padding-left: 6rem;
+        text-align: left;
+
+        .alert {
+          margin-bottom: 5px;
+
+          .alert-value {
+            color: $color-red-alert;
+            margin-left: 10px;
+          }
+        }
+      }
+
+      .high-risk-alerts {
+        margin-bottom: 20px;
+      }
     }
 
     > .actions > .button {
