--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -8,8 +8,9 @@ $color-dark-background: #808080;
 $color-dark-blue:  #00374f;
 $color-light-background: #0393db;
 $color-gray:       #b1b1b1;
-$color-red:        #ff0000;
 $color-light-gray: #e6e6e6;
+$color-dark-gray:  #848484;
+$color-red:        #ff0000;
 $color-red-alert:  #d4145a;
 
 $font:             Nunito, Arial, sans-serif;
