Social history alerts

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -605,7 +605,8 @@ div.page-prenatal-activity {
           margin-top: 30px
         }
 
-        &.medical {
+        &.medical,
+        &.social {
 
           .alert img {
             margin-top: -10px;
