--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -36,6 +36,10 @@ div.page-content {
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+
+    .ui.message.warning >.header {
+      margin-bottom: 20px;
+    }
 }
 
 div.language-switcher {
