--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -12,6 +12,7 @@ $color-light-gray: #e6e6e6;
 $color-dark-gray:  #848484;
 $color-red:        #ff0000;
 $color-red-alert:  #d4145a;
+$color-light-blue: #29c2ff;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
