--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -13,6 +13,7 @@ $color-dark-gray:  #848484;
 $color-red:        #ff0000;
 $color-red-alert:  #d4145a;
 $color-light-blue: #29c2ff;
+$color-white:      #fff;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
