--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -230,7 +230,6 @@ div.page-clinical {
         margin-left: 57px;
       }
     }
-
 }
 
 div.page-person-create {
@@ -660,6 +659,44 @@ div.page-prenatal-activity {
 
       .form.patient-provisions {
         min-height: 335px;
+      }
+    }
+}
+
+div.page-encounter-types {
+    font-size: 1.72rem; //24px;
+    text-align: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    div.ui.basic.head.segment {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      margin-left: -40px;
+    }
+
+    button.ui.primary.button {
+      padding: 0;
+      height: 60px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 80%;
+
+      .text {
+        float: left;
+        line-height: 60px;
+        margin-left: 40px;
+        text-align: left;
+        width: 80%;
+      }
+
+      .icon-back {
+        float: left;
+        margin-top: 17px;
+        transform: rotate(180deg);
       }
     }
 }
