--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -848,6 +848,43 @@ div.page-clinical-progress-report {
         text-transform: uppercase;
       }
 
+      .timeline-section {
+        display: grid;
+        grid-column-gap: 20px;
+        grid-template-columns: 25% 25% 35%;
+
+        .trimester-timeline {
+
+          > p, > span {
+            float: left;
+          }
+
+          p.blue {
+            border-top: 10px solid $color-primary;
+          }
+
+          p.gray {
+            border-top: 10px solid $color-light-gray;
+          }
+
+          span {
+            margin-top: -8px;
+          }
+
+          .due-date {
+            float: right;
+            margin-top: -15px;
+
+            img {
+              height: 40px;
+              width: 40px;
+            }
+          }
+
+        }
+
+      }
+
       .visits-section {
         display: grid;
         grid-column-gap: 20px;
