--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -840,7 +840,7 @@ div.page-clinical-progress-report {
 
     .patient-progress {
 
-      .caption.timeline {
+      .caption {
         font-size: 16px;
         font-weight: bold;
         margin-bottom: 30px;
