--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-light-background: #0393db;
 $color-gray:       #b1b1b1;
 $color-light-gray: #e6e6e6;
 $color-dark-gray:  #848484;
+$color-darker-gray: #6b6b6b;
 $color-red:        #ff0000;
 $color-red-alert:  #d4145a;
 $color-light-blue: #29c2ff;
