--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -8,6 +8,7 @@ $color-dark-background: #808080;
 $color-dark-blue:  #00374f;
 $color-light-background: #0393db;
 $color-gray:       #b1b1b1;
+$color-gray-border: #d9d9d9;
 $color-light-gray: #e6e6e6;
 $color-dark-gray:  #848484;
 $color-darker-gray: #6b6b6b;
