A fix [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -556,7 +556,7 @@ div.page-prenatal-activity {
             top: 25px;
             left: 30px;
             display: block;
-            background: black;
+            background: $color-text;
           }
         }
       }
